feat: Add evaluation batch size configuration to humanTFM.yaml.

--- a/configs/humanTFM.yaml
+++ b/configs/humanTFM.yaml
@@ -107,6 +107,7 @@ distributed:
 
 # Evaluation
 evaluation:
+  batch_size: 1
   num_samples: 100
   save_visualizations: true
   visualization_dir: "${training.checkpoint_dir}/visualizations"
