--- a/configs/humanTFM.yaml
+++ b/configs/humanTFM.yaml
@@ -17,12 +17,13 @@ model:
   dtype: "bfloat16"
   
   # Physics adapter (handles spatial upsampling too)
+  # Reduced video_size to save VRAM (~4x reduction in attention memory)
   physics_adapter:
     physics_channels: 4
     video_channels: 3
     hidden_dim: 64
     physics_size: [128, 384]
-    video_size: [480, 832]
+    video_size: [240, 416]  # Reduced from 480x832 to save memory
     use_residual: true
 
 # LoRA configuration - fine-tune the DiT
@@ -44,7 +45,7 @@ data:
   base_path: "./datasets/datasets"
   dataset_name: "turbulent_radiative_layer_2D"
   n_steps_input: 1   # Conditioning frame
-  n_steps_output: 8  # Frames to predict
+  n_steps_output: 4  # Frames to predict (reduced from 8 for memory)
   use_normalization: false
   train_split: "train"
   val_split: "valid"
@@ -68,7 +69,7 @@ training:
   use_residual_prediction: true
   
   batch_size: 1
-  gradient_accumulation_steps: 4
+  gradient_accumulation_steps: 8  # Increased from 4 for larger effective batch
   num_epochs: 30  # Longer training for two stages
   
   # Text prompt
